recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:16: error: not found: value lenght
    snowSide(levels-1,lenght/3)
                      ^Koch:19: error: not found: value lenght
    snowSide(levels-1,lenght/3)
                      ^